# pcem

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Makefile.in  NOTICE  README.md  README.meson.md  Readme-BSD.txt  Readme-LINUX.txt  TESTED.md  acer386.nvr  aclocal.m4  changelog.html  configure  configure.ac  depcomp  meson.build  meson_options.txt  missing  readme.html  readme.txt  tested.html
docs/: links-to-html.lua  md2html.sh  meson.build  pcem-meson-scripts.tar.bz2  pcem.man
experimental/printer_epsonlx810/: CMakeLists.txt  lpt_epsonlx810.c  plugin.c  wx-imagesave.cc
includes/: includes.cmake  meson.build
includes/private/: 386_common.h  386_ops.h  8087.h  82091aa.h  acc2036.h  acc2168.h  acc3221.h  acer386sx.h  ali1429.h  amstrad.h  bswap.h  cassette.h  cbm_io.h  cdrom-null.h  cmd640.h  codegen_accumulate.h  codegen_allocator.h  codegen_backend.h  codegen_backend_arm.h  codegen_backend_arm64.h  codegen_backend_arm64_defs.h  codegen_backend_arm64_ops.h  codegen_backend_arm_defs.h  codegen_backend_arm_ops.h  codegen_backend_x86-64.h  codegen_backend_x86-64_defs.h  codegen_backend_x86-64_ops.h  codegen_backend_x86-64_ops_helpers.h  codegen_backend_x86-64_ops_sse.h  codegen_backend_x86.h  codegen_backend_x86_defs.h  codegen_backend_x86_ops.h  codegen_backend_x86_ops_fpu.h  codegen_backend_x86_ops_helpers.h  codegen_backend_x86_ops_sse.h  codegen_ir.h  codegen_ir_defs.h  codegen_ops.h  codegen_ops_3dnow.h  codegen_ops_arith.h  (+291 more)
includes/public/: public_api.cmake
src/: 286.c  386.c  386.h  386_common.c  386_common.h  386_dynarec.c  386_dynarec_ops.c  386_ops.h  8087.h  808x.c  82091aa.c  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.linux32  Makefile.linux32-wx-sdl2  Makefile.linux64  Makefile.linux64-wx-sdl2  Makefile.mingw  Makefile.mingw-network  Makefile.mingw-wx-sdl2  Makefile.mingw-wx-sdl2-network  Makefile.mingw64  Makefile.osx64-wx-sdl2  acc2036.c  acc2036.h  acc3221.c  acer386sx.c  acer386sx.h  adlib.c  ali1429.c  ali1429.h  allegro-gui-config-sel.c  allegro-gui-configure.c  allegro-gui-deviceconfig.c  allegro-gui-hdconf.c  allegro-gui.c  allegro-gui.h  allegro-joystick.c  allegro-keyboard.c  (+619 more)
src/bus/: bus.cmake  mca.c  meson.build  pci.c
src/cdrom/: cdrom-image.cc  cdrom-ioctl-dummy.c  cdrom-ioctl-linux.c  cdrom-ioctl-osx.c  cdrom-ioctl.c  cdrom-null.c  cdrom.cmake  meson.build
src/codegen/: codegen.c  codegen.cmake  codegen_accumulate.c  codegen_allocator.c  codegen_block.c  codegen_ir.c  codegen_ops.c  codegen_ops_3dnow.c  codegen_ops_arith.c  codegen_ops_branch.c  codegen_ops_fpu_arith.c  codegen_ops_fpu_constant.c  codegen_ops_fpu_loadstore.c  codegen_ops_fpu_misc.c  codegen_ops_helpers.c  codegen_ops_jump.c  codegen_ops_logic.c  codegen_ops_misc.c  codegen_ops_mmx_arith.c  codegen_ops_mmx_cmp.c  codegen_ops_mmx_loadstore.c  codegen_ops_mmx_logic.c  codegen_ops_mmx_pack.c  codegen_ops_mmx_shift.c  codegen_ops_mov.c  codegen_ops_shift.c  codegen_ops_stack.c  codegen_reg.c  codegen_timing_486.c  codegen_timing_686.c  codegen_timing_common.c  codegen_timing_cyrixiii.c  codegen_timing_k6.c  codegen_timing_p6.c  codegen_timing_pentium.c  codegen_timing_winchip.c  codegen_timing_winchip2.c  codegen_x86-64.c  meson.build
src/cpu/: 386.c  386_common.c  386_dynarec.c  386_dynarec_ops.c  808x.c  cpu.c  cpu.cmake  cpu_tables.c  meson.build  x86seg.c  x87.c  x87_timings.c
src/debug-flags/: meson.build
src/devices/: cassette.c  device.c  devices.cmake  esdi_at.c  f82c710_upc.c  meson.build  nvr.c  ps2_nvr.c  sis496.c
src/disc/: disc.c  disc.cmake  disc_fdi.c  disc_img.c  disc_sector.c  meson.build
src/dosbox/: cdrom.h  cdrom_image.cpp  dbopl.cpp  dosbox.cmake  meson.build  nukedopl.cpp  nukedopl.h  vid_cga_comp.c  vid_cga_comp.h
src/flash/: flash.cmake  intel_flash.c  meson.build  rom.c  sst39sf010.c  tandy_eeprom.c  tandy_rom.c
src/floppy/: fdc.c  fdc37c665.c  fdc37c93x.c  fdd.c  floppy.cmake  meson.build
src/gameport/: gameport.c
src/hdd/: hdd.c  hdd.cmake  hdd_esdi.c  hdd_file.c  meson.build
src/ide/: ide.c  ide.cmake  ide_atapi.c  ide_sff8038i.c  meson.build  xtide.c
src/joystick/: gameport.c  joystick.cmake  joystick_ch_flightstick_pro.c  joystick_standard.c  joystick_sw_pad.c  joystick_tm_fcs.c  meson.build
src/keyboard/: keyboard.c  keyboard.cmake  keyboard_amstrad.c  keyboard_at.c  keyboard_olim24.c  keyboard_pcjr.c  keyboard_xt.c  meson.build
src/lpt/: lpt.c  lpt.cmake  lpt_dac.c  lpt_dss.c  lpt_epsonlx810.c  lpt_printer.c  meson.build
src/mame/: fmopl.c  fmopl.h  ymf262.c  ymf262.h
src/memory/: mem.c  mem_bios.c  memory.cmake  meson.build
src/mfm/: meson.build  mfm.cmake  mfm_at.c  mfm_xebec.c
src/minivhd/: LICENSE  cwalk.c  minivhd.h  minivhd_convert.c  minivhd_create.c  minivhd_io.c  minivhd_manage.c  minivhd_struct_rw.c  minivhd_util.c
src/models/: 82091aa.c  acc2036.c  acc2168.c  acc3221.c  acer386sx.c  ali1429.c  amstrad.c  cbm_io.c  cmd640.c  compaq.c  cs8230.c  dells200.c  dma.c  headland.c  i430fx.c  i430hx.c  i430lx.c  i430vx.c  i440bx.c  i440fx.c  intel.c  jim.c  laserxt.c  meson.build  model.c  models.cmake  mvp3.c  neat.c  nmi.c  nvr_tc8521.c  olivetti_m24.c  opti495.c  pc87306.c  pc87307.c  pic.c  piix.c  piix_pm.c  pit.c  ps1.c  ps2.c  (+18 more)
src/mouse/: meson.build  mouse.c  mouse.cmake  mouse_msystems.c  mouse_ps2.c  mouse_serial.c
src/networking/: meson.build  ne2000.c  nethandler.c  networking.cmake
src/plugin-api/: config.c  device.c  devices.c  logging.c  meson.build  paths.c  plugin-api.cmake  plugin.c  wx-utils.cc
src/resid-fp/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.VICE  aclocal.m4  configure  configure.in  convolve-sse.cc  convolve.cc  envelope.cc  envelope.h  extfilt.cc  extfilt.h  filter.cc  pot.cc  samp2src.pl  sid.cc  sid.h  version.cc  voice.cc  wave.cc  wave6581_PST.cc  wave6581_PS_.cc  wave6581_P_T.cc  wave6581__ST.cc  wave8580_PST.cc  wave8580_PS_.cc  wave8580_P_T.cc  wave8580__ST.cc
src/scsi/: meson.build  scsi.c  scsi.cmake  scsi_53c400.c  scsi_aha1540.c  scsi_cd.c  scsi_hd.c  scsi_ibm.c  scsi_zip.c
(+662 files in other folders)
