option('use-plugin-engine', type: 'boolean', value: false, description: 'Build PCem with plugin support.')
option('use-networking', type: 'boolean', value: false, description: 'Build PCem with networking support.')
option('use-pcap-networking', type: 'boolean', value: true, description: 'Build PCem with PCAP support. Need to allow networking support for this option to work.')
option('use-alsa', type: 'boolean', value: false, description: 'Build PCem with MIDI output using ALSA. This option only works on Linux.')
option('allow-experimental-code', type: 'boolean', value: false, description: 'Build PCem with experimental code.')
option('use-experimental-pdc', type: 'boolean', value: false, description: 'Build Professional Graphics Controller Support. Need to allow experimental code for this option to work.')
option('use-experimental-printer', type: 'boolean', value: false, description: 'Build Printer Support. Need to allow experimental code for this option to work.')

option('slirp-debug', type: 'boolean', value: false, description: 'Build PCem with SLIRP_DEBUG debug output. Needs to be a debug build to do anything.')
option('recompiler-debug', type: 'boolean', value: false, description: 'Build PCem with RECOMPILER_DEBUG debug output. Needs to be a debug build to do anything.')
option('ne2000-debug', type: 'boolean', value: false, description: 'Build PCem with NE2000_DEBUG debug output. Needs to be a debug build to do anything.')
option('emu8k-debug-registers', type: 'boolean', value: false, description: 'Build PCem with EMU8K_DEBUG_REGISTERS debug output. Needs to be a debug build to do anything.')
option('sb-dsp-record-debug', type: 'boolean', value: false, description: 'Build PCem with SB_DSP_RECORD_DEBUG debug output. Needs to be a debug build to do anything.')
option('mach64-debug', type: 'boolean', value: false, description: 'Build PCem with MACH64_DEBUG debug output. Needs to be a debug build to do anything.')
option('plugin-debug', type: 'boolean', value: false, description: 'Build PCem with PLUGIN_DEBUG debug output. Needs to be a debug build to do anything.')
option('extra-debug', type: 'boolean', value: false, description: 'Build PCem with DEBUG_EXTRA debug output. Needs to be a debug build to do anything.')
option('printer-debug', type: 'boolean', value: false, description: 'Build PCem with PRINTER_DEBUG debug output. Needs to be a debug build to do anything.')
