install_data('roms.txt', install_dir: get_option('datadir') / 'roms/430vx')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/acer386')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami286')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami386')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami386dx')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami486')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/amixt')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/cbm_pc10')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/cmdpc30')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/dells200')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/deskpro386')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/dtk')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/dtk386')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/endeavor')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/europc')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/genxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/hot-433')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/huyndaixt')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/huyndaixte')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmat')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmpc')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmpcjr')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmps1es')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/jukopc')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ltxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/lxt3')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/mach64gx')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/megapc')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/mr386dx')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/olivetti_m24')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/oti067')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc1512')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc1640')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc200')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc2086')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc3086')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/px386')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pxxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/revenge')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/sis496')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/tandy')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/tandy1000hx')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/tandy1000sl2')
install_data('roms.txt', install_dir: get_option('datadir') / 'roms/win486')
install_data('configs.txt', install_dir: get_option('datadir') / 'configs')
install_man('pcem.man.1')

