install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/430vx')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/acer386')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ami286')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ami386')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ami386dx')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ami486')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/amixt')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/cbm_pc10')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/cmdpc30')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/dells200')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/deskpro386')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/dtk')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/dtk386')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/endeavor')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/europc')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/genxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/hot-433')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/huyndaixt')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/huyndaixte')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ibmat')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ibmpc')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ibmpcjr')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ibmps1es')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ibmxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/jukopc')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/ltxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/lxt3')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/mach64gx')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/megapc')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/mr386dx')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/olivetti_m24')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/oti067')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/pc1512')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/pc1640')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/pc200')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/pc2086')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/pc3086')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/px386')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/pxxt')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/revenge')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/sis496')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/tandy')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/tandy1000hx')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/tandy1000sl2')
install_data('roms.txt', install_dir: get_option('datadir') / 'pcem/roms/win486')
install_data('configs.txt', install_dir: get_option('datadir') / 'pcem/configs')
install_man('pcem.man.1')

